Fix navbar buttons on smaller screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -194,3 +194,9 @@ $color-cheese-in-the-great-beyond: #b47821;
     word-break: break-word;
     line-height: 1.5;
 }
+
+
+// TODO: PORT TO JEKYLL MAPLE
+.site-nav ul {
+    flex-wrap: wrap;
+}
